test/negative/104_lowercase_exception.err
104_lowercase_exception.fx:2:1: error: exception name should start with a capital letter (A..Z)
 2 | exception myError
   | ^~~~~~~~~
